--- a/argo-cd/crossplane.yaml
+++ b/argo-cd/crossplane.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: crossplane-system
+  name: crossplane
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
