--- a/argo-cd/crossplane.yaml
+++ b/argo-cd/crossplane.yaml
@@ -19,3 +19,9 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+  ignoreDifferences:
+    - group: v1
+      kind: Secret
+      name: gcp-secret
+      jsonPointers:
+        - '.data'
